syntax = "proto3";

package MiniTools.Messages.Requests;

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}